--- a/homePage.html
+++ b/homePage.html
@@ -16,7 +16,7 @@
             <li class="nav-item">
               <a href="#Culture-Heritage">Culture-Heritage</a>
             </li>
-            <li class="nav-item"><a href="#History">History</a></li>
+            <li class="nav-item"><a href="history\history.html">History</a></li>
             <li class="nav-item right-item"><a href="#Contact">Contact</a></li>
           </ul>
         </nav>
