--- a/homePage.html
+++ b/homePage.html
@@ -11,26 +11,44 @@
       <header>
         <nav>
           <ul class="nav-list">
-            <li class="nav-item"><a href="#Tourist-spot">Tourist-spot</a></li>
-            <li class="nav-item"><a href="#Quisine">Quisine</a></li>
-            <li class="nav-item">
-              <a href="#Culture-Heritage">Culture-Heritage</a>
-            </li>
-            <li class="nav-item"><a href="history\history.html">History</a></li>
+            <li class="nav-item"><a href="#Tourist-spot">Tourist Spot</a></li>
+            <li class="nav-item"><a href="#Quisine">Cuisine</a></li>
+            <li class="nav-item"><a href="#Culture-Heritage">Culture & Heritage</a></li>
+            <li class="nav-item"><a href="history/history.html">History</a></li>
             <li class="nav-item right-item"><a href="#Contact">Contact</a></li>
           </ul>
         </nav>
         <h1 class="welcome-message">WELCOME TO RUSSIA</h1>
       </header>
     </div>
-      <div class="container-2">
-        <!-- the contents will be added later -->
-        <div class="content-box box1">Content 1</div>
-        <div class="content-box box2">Content 2</div>
-        <div class="content-box box3">Content 3</div>
-        <div class="content-box box4">Content 4</div>
-        <div class="content-box box5">Content 5</div>
-        <div class="content-box box6">Content 6</div>
+    <div class="container-2">
+      <div class="content-box box1">
+        <div class="image">
+          <img src="assets/st-ptsburg.jpg" alt="St Petersburg">
+          <span class="overlay-text"><h2>St. Petersburg</h2><p>St. Petersburg is a Russian port city on the Baltic Sea. It was the imperial capital for 2 centuries, having been founded in 1703 by Peter the Great, subject of the city's iconic “Bronze Horseman” statue. It remains Russia's cultural center, with venues such as the Mariinsky Theatre hosting opera and ballet, and the State Russian Museum showcasing Russian art, from Orthodox icon paintings to Kandinsky works</p></span>
+        </div>
+      </div>
+      <div class="content-box box2">
+        <div class="image">
+          <img src="assets\mosco.jpg" alt="Moscow">
+          <span class="overlay-text"><h2>Moscow</h2><p>Moscow, on the Moskva River in western Russia, is the nation’s cosmopolitan capital. In its historic core is the Kremlin, a complex that’s home to the president and tsarist treasures in the Armoury. Outside its walls is Red Square, Russia's symbolic center.</p></span>
+        </div>
+      </div>
+      <div class="content-box box3">
+        <div class="image">
+          <img src="assets\Golden Ring.jpg" alt="Golden Ring">
+          <span class="overlay-text"><h2>Golden Ring</h2><p>Visiting the Golden Ring offers an immersive experience into Russia's past, showcasing its artistic heritage and historical landmarks. It remains one of the most popular tourist routes in Russia, appealing to those interested in exploring the roots of Russian civilization.
+          </p></span>
+        </div>
+      </div>
+      <div class="content-box box4">
+        <div class="image">
+          <img src="assets\Red_square.jpg" alt="Content 4">
+          <span class="overlay-text"><h2>Red Square</h2><p>Red Square is one of the oldest and largest squares in Moscow, Russia. It is located in Moscow's historic centre, in the eastern walls of the Kremlin. It is the city's most prominent landmark, with famous buildings such as Saint Basil's Cathedral, Lenin's Mausoleum and the GUM department store.</p></span>
+        </div>
+      </div>
     </div>
+    <div class="container-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro soluta dolorem suscipit. Quam nulla aliquid tempora voluptatibus fugit animi praesentium sunt quod voluptas, assumenda expedita pariatur alias cum enim similique.</div>
+    <footer>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed est culpa nobis, quisquam sapiente quas commodi et vero laboriosam. Doloribus vitae architecto autem fugiat illum quas dolores atque quisquam dignissimos?</footer>
   </body>
 </html>
