--- a/homePage.html
+++ b/homePage.html
@@ -11,7 +11,7 @@
       <header>
         <nav>
           <ul class="nav-list">
-            <li class="nav-item"><a href="#Tourist-spot">Tourist Spot</a></li>
+            <li class="nav-item"><a href="tourist/tourist.html">Tourist Spot</a></li>
             <li class="nav-item"><a href="#Quisine">Cuisine</a></li>
             <li class="nav-item">
               <a href="#Culture-Heritage">Culture & Heritage</a>
