--- a/homePage.html
+++ b/homePage.html
@@ -12,7 +12,7 @@
         <nav>
           <ul class="nav-list">
             <li class="nav-item"><a href="tourist/tourist.html">Tourist Spot</a></li>
-            <li class="nav-item"><a href="#Quisine">Cuisine</a></li>
+            <li class="nav-item"><a href="cusine/cuisine.html">Cuisine</a></li>
             <li class="nav-item">
               <a href="#Culture-Heritage">Culture & Heritage</a>
             </li>
