--- a/homePage.html
+++ b/homePage.html
@@ -14,7 +14,7 @@
             <li class="nav-item"><a href="tourist/tourist.html">Tourist Spot</a></li>
             <li class="nav-item"><a href="cusine/cuisine.html">Cuisine</a></li>
             <li class="nav-item">
-              <a href="#Culture-Heritage">Culture & Heritage</a>
+              <a href="culture and heritage/index.html">Culture & Heritage</a>
             </li>
             <li class="nav-item"><a href="history/history.html">History</a></li>
             <li class="nav-item right-item"><a href="#Contact">Contact</a></li>
