home page video added

--- a/homePage.html
+++ b/homePage.html
@@ -95,6 +95,12 @@
         <img src="assets\snow_gl.jpg" alt="" class="slideshow-img" />
       </div>
     </div>
+    <div class="container-4">
+      <div class="video-background">
+        <video src="assets/moscow-russia-city-video-guide-visit-moscow-1080-publer.io.mp4" autoplay muted loop></video>
+      </div>
+      <div id="message" class="message hidden">Russia is great again</div>
+    </div>
     <footer>
       <p>&copy; 2024 Russian History and Tourism</p>
     </footer>
