--- a/homePage.html
+++ b/homePage.html
@@ -19,7 +19,7 @@
             <a href="culture and heritage/index.html">Culture & Heritage</a>
           </li>
           <li class="nav-item"><a href="history/history.html">History</a></li>
-          <li class="nav-item right-item"><a href="contact/contact.html">Contact</a></li>
+          <li class="nav-item right-item"><a href="contact\contact.html">Contact</a></li>
         </ul>
       </nav>
       <h1 class="welcome-message">WELCOME TO RUSSIA</h1>
