--- a/homePage.html
+++ b/homePage.html
@@ -32,7 +32,7 @@
         <span class="overlay-text">
           <h2>St. Petersburg</h2>
           <p>
-            St. Petersburg is a Russian port city on the Baltic Sea. It was
+            St. Petersburg is a Russian port city on the Baltic Sea. It waEs
             the imperial capital for 2 centuries, having been founded in 1703
             by Peter the Great, subject of the city's iconic “Bronze Horseman”
             statue. It remains Russia's cultural center, with venues such as
@@ -103,8 +103,56 @@
     </div>
     <div id="message" class="message hidden">Russia is great again</div>
   </div>
-  <footer>
-    <p>&copy; 2024 Russian History and Tourism</p>
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-grid">
+        <div class="footer-section">
+          <h3>About Us</h3>
+          <p>We are dedicated to providing the best service to our customers. Our mission is to create value through innovation and dedication.</p>
+          <div class="social-links">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+          </div>
+        </div>
+
+        <div class="footer-section">
+          <h3>Quick Links</h3>
+          <ul class="footer-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="contact\contact.html">Contact</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h3>Contact Info</h3>
+          <p><i class="fas fa-map-marker-alt"></i> 123 Business Street, Suite 100</p>
+          <p><i class="fas fa-phone"></i> +1 (555) 123-4567</p>
+          <p><i class="fas fa-envelope"></i> info@example.com</p>
+          <p><i class="fas fa-clock"></i> Mon-Fri: 9:00 AM - 5:00 PM</p>
+        </div>
+
+        <div class="footer-section">
+          <h3>Newsletter</h3>
+          <p>Subscribe to our newsletter for updates and exclusive offers.</p>
+          <form class="newsletter-form">
+            <input type="email" placeholder="Enter your email">
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p>&copy; 2024 Your Company Name. All rights reserved.</p>
+        <div class="footer-bottom-links">
+          <a href="#">Privacy Policy</a>
+          <a href="#">Terms of Service</a>
+          <a href="#">Cookie Policy</a>
+        </div>
+      </div>
+    </div>
   </footer>
   <script src="homePage.js"></script>
 </body>
