--- a/homePage.html
+++ b/homePage.html
@@ -90,13 +90,14 @@
     </div>
   </div>
   <div class="container-3">
+    <div class="background-overlay"></div>
     <div class="slideshow-container">
-      <img src="assets\img_people.jpg" alt="" class="slideshow-img" />
-      <img src="assets\doll.jpg" alt="" class="slideshow-img" />
-      <img src="assets\pie_gl.jpg" alt="" class="slideshow-img" />
-      <img src="assets\snow_gl.jpg" alt="" class="slideshow-img" />
+        <img src="assets/img_people.jpg" alt="People" class="slideshow-img" />
+        <img src="assets/doll.jpg" alt="Doll" class="slideshow-img" />
+        <img src="assets/pie_gl.jpg" alt="Pie" class="slideshow-img" />
+        <img src="assets/snow_gl.jpg" alt="Snow" class="slideshow-img" />
     </div>
-  </div>
+</div>
   <div class="container-4">
     <div class="video-background">
       <video src="assets/moscow-russia-city-video-guide-visit-moscow-1080-publer.io.mp4" autoplay muted loop></video>
