changed the footer

--- a/homePage.html
+++ b/homePage.html
@@ -92,6 +92,7 @@
   <div class="container-3">
     <div class="background-overlay"></div>
     <div class="slideshow-container">
+      
         <img src="assets/img_people.jpg" alt="People" class="slideshow-img" />
         <img src="assets/doll.jpg" alt="Doll" class="slideshow-img" />
         <img src="assets/pie_gl.jpg" alt="Pie" class="slideshow-img" />
@@ -131,7 +132,7 @@
           <h3>Contact Info</h3>
           <p><i class="fas fa-map-marker-alt"></i> 123 Business Street, Suite 100</p>
           <p><i class="fas fa-phone"></i> +1 (555) 123-4567</p>
-          <p><i class="fas fa-envelope"></i> info@example.com</p>
+          <p><i class="fas fa-envelope"></i> russia@gamil.com</p>
           <p><i class="fas fa-clock"></i> Mon-Fri: 9:00 AM - 5:00 PM</p>
         </div>
 
@@ -150,7 +151,6 @@
         <div class="footer-bottom-links">
           <a href="#">Privacy Policy</a>
           <a href="#">Terms of Service</a>
-          <a href="#">Cookie Policy</a>
         </div>
       </div>
     </div>
