--- a/homePage.html
+++ b/homePage.html
@@ -133,7 +133,7 @@
           <p><i class="fas fa-map-marker-alt"></i> 123 Business Street, Suite 100</p>
           <p><i class="fas fa-phone"></i> +1 (555) 123-4567</p>
           <p><i class="fas fa-envelope"></i> russia@gamil.com</p>
-          <p><i class="fas fa-clock"></i> Mon-Fri: 9:00 AM - 5:00 PM</p>
+          <p><i class="fas fa-clock"></i> Mon-sat: 9:00 AM - 5:00 PM</p>
         </div>
 
         <div class="footer-section">
@@ -147,7 +147,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p>&copy; 2024 Your Company Name. All rights reserved.</p>
+        <p>&copy; All rights reserved.</p>
         <div class="footer-bottom-links">
           <a href="#">Privacy Policy</a>
           <a href="#">Terms of Service</a>
