--- a/tourist/tourist.html
+++ b/tourist/tourist.html
@@ -127,10 +127,8 @@
         <div class="footer-grid">
           <div class="footer-section">
             <h3>About Us</h3>
-            <p>
-              We are dedicated to providing the best service to our customers.
-              Our mission is to create value through innovation and dedication.
-            </p>
+            <p>We are dedicated to providing the best service to our customers. Our mission is to create value through
+              innovation and dedication.</p>
             <div class="social-links">
               <a href="#"><i class="fab fa-facebook"></i></a>
               <a href="#"><i class="fab fa-twitter"></i></a>
@@ -138,39 +136,36 @@
               <a href="#"><i class="fab fa-linkedin"></i></a>
             </div>
           </div>
-
+  
           <div class="footer-section">
             <h3>Quick Links</h3>
             <ul class="footer-links">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="contact\contact.html">Contact</a></li>
+              <li><a href="http://127.0.0.1:3000/Russian_Tourism_Website/homePage.html">Home</a></li>
+              <li><a href="http://127.0.0.1:3000/Russian_Tourism_Website/about/about.html">About</a></li>
+              <li><a href="http://127.0.0.1:3000/Russian_Tourism_Website/contact/contact.html">Contact</a></li>
             </ul>
           </div>
-
+  
           <div class="footer-section">
             <h3>Contact Info</h3>
-            <p>
-              <i class="fas fa-map-marker-alt"></i> 123 Business Street, Suite
-              100
-            </p>
+            <p><i class="fas fa-map-marker-alt"></i> 123 Business Street, Suite 100</p>
             <p><i class="fas fa-phone"></i> +1 (555) 123-4567</p>
             <p><i class="fas fa-envelope"></i> russia@gamil.com</p>
-            <p><i class="fas fa-clock"></i> Mon-Fri: 9:00 AM - 5:00 PM</p>
+            <p><i class="fas fa-clock"></i> Mon-sat: 9:00 AM - 5:00 PM</p>
           </div>
-
+  
           <div class="footer-section">
             <h3>Newsletter</h3>
             <p>Subscribe to our newsletter for updates and exclusive offers.</p>
             <form class="newsletter-form">
-              <input type="email" placeholder="Enter your email" />
+              <input type="email" placeholder="Enter your email">
               <button type="submit">Subscribe</button>
             </form>
           </div>
         </div>
-
+  
         <div class="footer-bottom">
-          <p>&copy; 2024 Your Company Name. All rights reserved.</p>
+          <p>&copy; All rights reserved.</p>
           <div class="footer-bottom-links">
             <a href="#">Privacy Policy</a>
             <a href="#">Terms of Service</a>
