--- a/contact/contact.html
+++ b/contact/contact.html
@@ -7,7 +7,7 @@
     <style>
       :root {
         --primary-color: rgb(32, 114, 152);
-        --secondary-color: #3498db;
+        --secondary-color: #3498db; /* Updated color */
         --text-color: #333;
       }
       * {
@@ -21,9 +21,9 @@
           center fixed;
         background-size: cover;
         color: #333;
-        display: inline-block;
-        align-items: center;
+        display: flex;
         justify-content: center;
+        align-items: center;
         height: 100vh;
       }
 
@@ -82,144 +82,6 @@
       .contact-button:hover {
         background-color: #0088cc;
       }
-      /* Footer */
-      .footer {
-        background-color: var(--primary-color);
-        color: var(--light-text);
-        padding: 4rem 0 2rem;
-        font-family: "Arial", sans-serif;
-      }
-
-      .footer-content {
-        max-width: var(--container-max-width);
-        margin: 0 auto;
-        padding: 0 var(--spacing-standard);
-      }
-
-      .footer-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 2rem;
-        margin-bottom: 3rem;
-      }
-
-      .footer-section h3 {
-        color: white;
-        margin-bottom: 1.5rem;
-        font-size: 1.2rem;
-        font-weight: 600;
-      }
-
-      .footer-section p {
-        margin: 0.5rem 0;
-        line-height: 1.6;
-      }
-
-      .footer-links {
-        list-style: none;
-      }
-
-      .footer-links li {
-        margin-bottom: 0.8rem;
-      }
-
-      .footer-links a,
-      .social-links a {
-        color: var(--light-text);
-        text-decoration: none;
-        transition: color var(--transition-standard);
-      }
-
-      .footer-links a:hover,
-      .social-links a:hover {
-        color: var(--secondary-color);
-      }
-
-      .social-links {
-        display: flex;
-        gap: var(--spacing-standard);
-        margin-top: var(--spacing-standard);
-      }
-
-      .social-links a {
-        font-size: 1.5rem;
-      }
-
-      .footer-bottom {
-        border-top: 1px solid #34495e;
-        padding-top: 2rem;
-        text-align: center;
-        font-size: 0.9rem;
-        color: #bdc3c7;
-      }
-
-      .newsletter-form {
-        display: flex;
-        gap: 0.5rem;
-        margin-top: var(--spacing-standard);
-      }
-
-      .newsletter-form input {
-        padding: 0.5rem;
-        border: none;
-        border-radius: var(--border-radius);
-        flex-grow: 1;
-      }
-
-      .newsletter-form button {
-        padding: 0.5rem 1rem;
-        background-color: var(--secondary-color);
-        color: white;
-        border: none;
-        border-radius: var(--border-radius);
-        cursor: pointer;
-        transition: background-color var(--transition-standard);
-      }
-
-      .newsletter-form button:hover {
-        background-color: #2980b9;
-      }
-
-      /* Media Queries */
-      @media (max-width: 768px) {
-        .footer-grid {
-          grid-template-columns: 1fr;
-        }
-
-        .footer-bottom-links {
-          display: flex;
-          flex-direction: column;
-          gap: 0.5rem;
-        }
-
-        .footer-bottom-links a {
-          margin: 0.5rem 0;
-        }
-
-        .container-2 {
-          grid-template-columns: 1fr;
-        }
-
-        .welcome-message {
-          padding: 3rem;
-          font-size: 1.5em;
-        }
-      }
-
-      @media (max-width: 480px) {
-        body {
-          font-size: 1rem;
-        }
-
-        .nav-item {
-          font-size: 1rem;
-          margin-right: 0.5rem;
-        }
-
-        .nav-item a {
-          padding: 0.5rem 0.75rem;
-        }
-      }
     </style>
   </head>
 
@@ -250,62 +112,5 @@
         >Email Us</a
       >
     </div>
-
-    <footer class="footer">
-      <div class="footer-content">
-        <div class="footer-grid">
-          <div class="footer-section">
-            <h3>About Us</h3>
-            <p>
-              We are dedicated to providing the best service to our customers.
-              Our mission is to create value through innovation and dedication.
-            </p>
-            <div class="social-links">
-              <a href="#"><i class="fab fa-facebook"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-linkedin"></i></a>
-            </div>
-          </div>
-
-          <div class="footer-section">
-            <h3>Quick Links</h3>
-            <ul class="footer-links">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="contact\contact.html">Contact</a></li>
-            </ul>
-          </div>
-
-          <div class="footer-section">
-            <h3>Contact Info</h3>
-            <p>
-              <i class="fas fa-map-marker-alt"></i> 123 Business Street, Suite
-              100
-            </p>
-            <p><i class="fas fa-phone"></i> +1 (555) 123-4567</p>
-            <p><i class="fas fa-envelope"></i> russia@gamil.com</p>
-            <p><i class="fas fa-clock"></i> Mon-Fri: 9:00 AM - 5:00 PM</p>
-          </div>
-
-          <div class="footer-section">
-            <h3>Newsletter</h3>
-            <p>Subscribe to our newsletter for updates and exclusive offers.</p>
-            <form class="newsletter-form">
-              <input type="email" placeholder="Enter your email" />
-              <button type="submit">Subscribe</button>
-            </form>
-          </div>
-        </div>
-
-        <div class="footer-bottom">
-          <p>&copy; 2024 Your Company Name. All rights reserved.</p>
-          <div class="footer-bottom-links">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Service</a>
-          </div>
-        </div>
-      </div>
-    </footer>
   </body>
 </html>
