--- a/homePage.html
+++ b/homePage.html
@@ -13,13 +13,13 @@
     <header>
       <nav>
         <ul class="nav-list">
+          <li class="nav-item"><a href="about/about.html">About</a></li>
           <li class="nav-item"><a href="tourist/tourist.html">Tourist Spot</a></li>
           <li class="nav-item"><a href="cusine/cuisine.html">Cuisine</a></li>
           <li class="nav-item">
             <a href="culture and heritage/index.html">Culture & Heritage</a>
           </li>
           <li class="nav-item"><a href="history/history.html">History</a></li>
-          <li class="nav-item right-item"><a href="contact\contact.html">Contact</a></li>
         </ul>
       </nav>
       <h1 class="welcome-message">WELCOME TO RUSSIA</h1>
@@ -92,13 +92,13 @@
   <div class="container-3">
     <div class="background-overlay"></div>
     <div class="slideshow-container">
-      
-        <img src="assets/img_people.jpg" alt="People" class="slideshow-img" />
-        <img src="assets/doll.jpg" alt="Doll" class="slideshow-img" />
-        <img src="assets/pie_gl.jpg" alt="Pie" class="slideshow-img" />
-        <img src="assets/snow_gl.jpg" alt="Snow" class="slideshow-img" />
+
+      <img src="assets/img_people.jpg" alt="People" class="slideshow-img" />
+      <img src="assets/doll.jpg" alt="Doll" class="slideshow-img" />
+      <img src="assets/pie_gl.jpg" alt="Pie" class="slideshow-img" />
+      <img src="assets/snow_gl.jpg" alt="Snow" class="slideshow-img" />
     </div>
-</div>
+  </div>
   <div class="container-4">
     <div class="video-background">
       <video src="assets/moscow-russia-city-video-guide-visit-moscow-1080-publer.io.mp4" autoplay muted loop></video>
@@ -110,7 +110,8 @@
       <div class="footer-grid">
         <div class="footer-section">
           <h3>About Us</h3>
-          <p>We are dedicated to providing the best service to our customers. Our mission is to create value through innovation and dedication.</p>
+          <p>We are dedicated to providing the best service to our customers. Our mission is to create value through
+            innovation and dedication.</p>
           <div class="social-links">
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -122,8 +123,8 @@
         <div class="footer-section">
           <h3>Quick Links</h3>
           <ul class="footer-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="homePage.html">Home</a></li>
+            <li><a href="about/about.html">About</a></li>
             <li><a href="contact\contact.html">Contact</a></li>
           </ul>
         </div>
