--- a/homePage.html
+++ b/homePage.html
@@ -150,8 +150,8 @@
       <div class="footer-bottom">
         <p>&copy; All rights reserved.</p>
         <div class="footer-bottom-links">
-          <a href="#">Privacy Policy</a>
-          <a href="#">Terms of Service</a>
+          <a href="#"><b>Privacy Policy</b></a>
+          <a href="#"><b>Terms of Service</b></a>
         </div>
       </div>
     </div>
